tests/NormalTests/paczka2/big_fuzzy/20355381.err
Error in line 19: FhlOEIoGT S7 95,8
Error in line 18: japtwzSu S844 36,2
Error in line 26: japtwzSu S513 90,5
Error in line 48: FhlOEIoGT S513 -1,8
Error in line 34: UuwWUV0ms S7 37,4
Error in line 52: japtwzSu S513 57,6
Error in line 55: japtwzSu A209 75,6
Error in line 57: japtwzSu S7 0,1
Error in line 65: A209 S844 8,63
Error in line 69: n448 S844 23,0
Error in line 27: Rd4 S7 2,3
Error in line 78: Rd4 S513 67,1
Error in line 73: FhlOEIoGT S513 174,7
Error in line 100: iT2 S844 *,4
Error in line 76: iT2 S7 47,7
Error in line 110: UuwWUV0ms S844 -1,0
Error in line 107: UuwWUV0ms S844 50,3
Error in line 108: A209 S7 44,6
Error in line 93: FhlOEIoGT A209 199,7
Error in line 112: A209 S513 47,8
Error in line 105: japtwzSu S844 311,7
Error in line 120: FhlOEIoGT S513 59,8
Error in line 137: FhlOEIoGTS844181,2
Error in line 145: UuwWUV0ms S844 6,7
Error in line 142: japtwzSu S844 50,4
Error in line 147: japtwzSu S7 61,5
Error in line 96: Rd4 S844 47,2
Error in line 158: A209 S513 -1,6
Error in line 126: FhlOEIoGT S844 47,8
Error in line 150: n448 S513 13,4
Error in line 156: UuwWUV0ms A209 26,3
Error in line 157: A209 S513 36,6
Error in line 149: iT2 S844 150,0
Error in line 171: FhlOEIoGT S513 53,5
Error in line 176: iT2 S5S3 99,9
Error in line 167: iT2 S7 17,0
Error in line 189: n448 A209 68,3
Error in line 182: japtwzSu S7 73,5
Error in line 193: Rd4 S844 96,1
Error in line 199: n448 S7 52,5
Error in line 202: n448 S844 27,2
Error in line 201: Rd4 S513 55,5
Error in line 211: Rd4 S7 264,33
Error in line 203: n448 A209 90,6
Error in line 217: iT2 S7 73,0
Error in line 204: Rd4 S7 57,7
Error in line 218: iT2 S844 66,6
Error in line 209: UuwWUV0ms S7 80,7
Error in line 233: Rd4 S513 26,1
Error in line 237: japtwzSu A209 85,0
Error in line 239: japtwzSu S844 68,1
Error in line 244: UuwWUV0ms S513 19,1
Error in line 243: japtwzSu A209 41,6
